<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/slight_blue_gray"
    tools:context=".DetailedStateFragment">

    <!-- 아이 온도 Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/temp_card"
        android:layout_width="@dimen/card_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/peaceful_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/temp_card_title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/temp_card_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/temp_card_placeholder"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="24sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/temp_card_symbol"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="#666666"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/temp_line_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.github.mikephil.charting.charts.LineChart>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- 바깥 온도 Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/env_temp_card"
        android:layout_width="@dimen/card_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:cardBackgroundColor="@color/peaceful_green"
        app:layout_constraintBottom_toBottomOf="@+id/env_humidity_card"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/env_card_title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/env_temp_card_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/env_card_placeholder"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="24sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/env_card_symbol"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="#666666"
                    android:textSize="16sp" />
            </LinearLayout>


            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/env_temp_line_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- 바깥 습도 Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/env_humidity_card"
        android:layout_width="@dimen/card_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/peaceful_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/env_humidity_card_title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/env_humidity_card_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/env_humidity_card_placeholder"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="24sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/env_humidity_card_symbol"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="#666666"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/env_humidity_line_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- 아이 무게 Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/weight_card"
        android:layout_width="@dimen/card_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/baby_pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/weight_card_title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/weight_card_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/weight_card_placeholder"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="24sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/weight_card_symbol"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="#666666"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/weight_line_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- 소음량 Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/noise_card"
        android:layout_width="@dimen/card_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/warning_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/env_humidity_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/noise_card_title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/noise_card_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/noise_card_placeholder"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="24sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/sound_card_symbol"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="#666666"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/noise_line_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- 미세먼지 Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/dust_card"
        android:layout_width="@dimen/card_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="@color/warning_yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/env_temp_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="@string/dust_card_title" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/dust_card_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/dust_card_placeholder"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textSize="24sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/sound_card_symbol"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="#666666"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/dust_line_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>